data/forge_javadoc/1.8.9/processed/net_minecraft_client_gui_ServerListEntryNormal.md
# ServerListEntryNormal

**Inheritance:** java.lang.Object → net.minecraft.client.gui.ServerListEntryNormal

## Class signature

```java
public class ServerListEntryNormal extends java.lang.Object implements GuiListExtended.IGuiListEntry
```

## Constructors

- `ServerListEntryNormal(GuiMultiplayer p_i45048_1_, ServerData p_i45048_2_)`

## Methods

- `void drawEntry(int slotIndex, int x, int y, int listWidth, int slotHeight, int mouseX, int mouseY, boolean isSelected)`
- `protected void func_178012_a(int p_178012_1_, int p_178012_2_, ResourceLocation p_178012_3_)`
- `ServerData getServerData()`
- `boolean mousePressed(int slotIndex, int p_148278_2_, int p_148278_3_, int p_148278_4_, int p_148278_5_, int p_148278_6_)` — Returns true if the mouse has been pressed on this control.
- `void mouseReleased(int slotIndex, int x, int y, int mouseEvent, int relativeX, int relativeY)` — Fired when the mouse button is released.
- `void setSelected(int p_178011_1_, int p_178011_2_, int p_178011_3_)`